--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -10,7 +10,7 @@
   background-color: var(--white);
   min-width: 600px;
   min-height: 480px;
-  max-width: 1200px;
+  max-width: 900px;
 
   display: flex;
   overflow: hidden;
@@ -48,27 +48,6 @@
   display: flex;
   flex-direction: column;
   box-shadow: inset -2px 0px 2px 0px rgb(0, 0, 0, 0.05);
-  position: relative;
-  transition: width ease 0.1s;
-}
-
-.sidebar-drag {
-  $width: 10px;
-
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: $width;
-  background-color: var(--black);
-  cursor: ew-resize;
-  opacity: 0;
-  transition: all ease 0.3s;
-
-  &:hover,
-  &:active {
-    opacity: 0.2;
-  }
 }
 
 .window-content {
@@ -146,7 +125,7 @@
   border-radius: 10px;
   margin-bottom: 10px;
   box-shadow: var(--card-shadow);
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
   user-select: none;
   border: 2px solid transparent;
@@ -178,7 +157,6 @@
   right: -20px;
   transition: all ease 0.3s;
   opacity: 0;
-  cursor: pointer;
 }
 
 .chat-item:hover > .chat-item-delete {
@@ -198,11 +176,10 @@
   margin-top: 8px;
 }
 
-.chat-item-count,
+.chat-item-count {
+}
+
 .chat-item-date {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .sidebar-tail {
@@ -428,9 +405,15 @@
   background-color: var(--white);
   color: var(--black);
   font-family: inherit;
-  padding: 10px 90px 10px 14px;
+  padding: 10px 14px 50px;
   resize: none;
   outline: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .chat-input {
+    font-size: 16px;
+  }
 }
 
 .chat-input:focus {
@@ -443,22 +426,11 @@
 
   position: absolute;
   right: 30px;
-  bottom: 32px;
-}
-
-@media only screen and (max-width: 600px) {
-  .chat-input {
-    font-size: 16px;
-  }
-
-  .chat-input-send {
-    bottom: 30px;
-  }
+  bottom: 30px;
 }
 
 .export-content {
   white-space: break-spaces;
-  padding: 10px !important;
 }
 
 .loading-content {
