--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -126,10 +126,6 @@ select {
   text-align: center;
 }
 
-label {
-  cursor: pointer;
-}
-
 input {
   text-align: center;
 }
@@ -159,11 +155,19 @@ input[type="checkbox"]:checked::after {
 
 input[type="range"] {
   appearance: none;
+  border: var(--border-in-light);
+  border-radius: 10px;
+  padding: 5px 15px 5px 10px;
   background-color: var(--white);
   color: var(--black);
+
+  &::before {
+    content: attr(value);
+    font-size: 12px;
+  }
 }
 
-@mixin thumb() {
+input[type="range"]::-webkit-slider-thumb {
   appearance: none;
   height: 8px;
   width: 20px;
@@ -172,41 +176,15 @@ input[type="range"] {
   cursor: pointer;
   transition: all ease 0.3s;
   margin-left: 5px;
-  border: none;
 }
 
-input[type="range"]::-webkit-slider-thumb {
-  @include thumb();
-}
-
-input[type="range"]::-moz-range-thumb {
-  @include thumb();
-}
-
-input[type="range"]::-ms-thumb {
-  @include thumb();
-}
-
-@mixin thumbHover() {
+input[type="range"]::-webkit-slider-thumb:hover {
   transform: scaleY(1.2);
   width: 24px;
 }
 
-input[type="range"]::-webkit-slider-thumb:hover {
-  @include thumbHover();
-}
-
-input[type="range"]::-moz-range-thumb:hover {
-  @include thumbHover();
-}
-
-input[type="range"]::-ms-thumb:hover {
-  @include thumbHover();
-}
-
 input[type="number"],
-input[type="text"],
-input[type="password"] {
+input[type="text"] {
   appearance: none;
   border-radius: 10px;
   border: var(--border-in-light);
@@ -291,17 +269,23 @@ pre {
   }
 }
 
-.error {
-  width: 80%;
-  border-radius: 20px;
-  border: var(--border-in-light);
-  box-shadow: var(--card-shadow);
-  padding: 20px;
-  overflow: auto;
-  background-color: var(--white);
-  color: var(--black);
-
-  pre {
-    overflow: auto;
-  }
+.home_sidebar-actions__zyNfR>.home_sidebar-action__JhMu0:nth-of-type(3) .button_shadow__Ap98F{
+	display: none!important;
 }
+.home_sidebar-actions__zyNfR>.home_sidebar-action__JhMu0:nth-of-type(2) .button_shadow__Ap98F{
+	display: none!important;
+}
+.the_img{
+	display: inline-block!important;
+	width: 207px!important;
+	height: 44px!important;
+}
+.the_img1{
+	display: inline-block!important;
+	width: 21px!important;
+	height: 21px!important;
+	border-radius: 50%;
+}
+// .button_shadow__Ap98F{
+// 	display: none!important;
+// }
