--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -275,15 +275,20 @@ pre {
 .home_sidebar-actions__zyNfR>.home_sidebar-action__JhMu0:nth-of-type(2) .button_shadow__Ap98F{
 	display: none!important;
 }
+
 .the_img{
 	display: inline-block!important;
 	width: 207px!important;
 	height: 44px!important;
+	// margin-left: 15px;
 }
 .the_img1{
 	display: inline-block!important;
 	width: 21px!important;
 	height: 21px!important;
+	border-radius: 50%;
+}
+.bor_a{
 	border-radius: 50%;
 }
 // .button_shadow__Ap98F{
